# obagent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOY.md  Dockerfile  README.md  constants.py  docker-compose.yml  gen_zsh_completion.py  justfile  main.py  plan-consume-drain.md  plan-email-ingest.md  plan-notion-file-sync.md  plan.md  pyproject.toml  utils.py
commands/: bank.py  check.py  classify.py  consume.py  export.py  fields.py  fix.py  ingest.py  llm.py  merchant.py  ocr.py  people.py  pipeline.py  remove.py  render.py  scan.py  set_field.py
commands/bank_statement/: __init__.py  consume.py  llm.py  pipeline.py  render.py
commands/document/: __init__.py  consume.py  export.py  llm.py  pipeline.py  render.py
commands/notion/: backfill.py  sync.py
commands/receipt/: __init__.py  consume.py  fix.py  llm.py  pipeline.py  render.py
hooks/: pre-commit
lib/: constants.py  fields.py  name_store.py  notion_api.py  notion_fieldmap.py  pipeline.py  utils.py
plans/: 2026-06-29-email-ingest.md  2026-06-29-notion-sync.md  2026-06-30-consume-drain.md  2026-06-30-native-nas-migration.md  2026-07-01-consume-classify.md
scripts/: gmail-ingest.gs  inspect.sh  install.sh  loop.sh  publish.sh  purge-consumed.sh  run.sh
tests/: conftest.py  test_bank.py  test_bs_consume_integration.py  test_bs_llm_unit.py  test_consume_integration.py  test_consume_unit.py  test_fix_unit.py  test_ingest_unit.py  test_llm_unit.py  test_main.py  test_merchant.py  test_ocr_unit.py  test_people.py  test_render_unit.py  test_scan_unit.py  test_utils.py
(+38 files in other folders)
