[project]
name = "obagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["click"]

[project.scripts]
obagent = "main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["main.py", "commands"]

[dependency-groups]
dev = [
    "ruff>=0.15.2",
]
