[project]
name = "obagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click",
    "mistralai>=1.12.4",
    "openai>=2.21.0",
    "questionary",
]

[project.scripts]
obagent = "main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["main.py", "commands", "constants.py", "utils.py"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.2",
    "ty>=0.0.1a7",
]
